package observe.pull;

public interface Observer {
    void update(Observable o);
}
